# quadruped-locomotion-rl

./: .gitignore  .gitmodules  README.md  debug_obs.py  env0_compliance_log.csv  plot_compliance.py  pyproject.toml  requirements.txt
deploy/: README.md  __init__.py  deploy.py  deploy_compliant_stance.py  export_policy.py  launch_scene.py  pyproject.toml  run.py  task_mapping.yaml
deploy/common/: __init__.py  action.py  commander.py  joint_mapping.py  observation.py  policy_loader.py  rl_controller.py
deploy/configs/: compliant_stance.yaml  default_stance.yaml  flat_walk.yaml  go2_flat.yaml  go2_flat_modular.yaml  go2_flat_with_history.yaml  go2_vanilla_walk.yaml  orientation_tracking.yaml  pos_xy_tracking.yaml  soft_pos_xy_tracking.yaml  soft_walk.yaml
deploy/core/: __init__.py  command_manager.py  config.py  policy_controller.py
deploy/docker/: Dockerfile  docker-compose.yaml  entrypoint-policy.sh  entrypoint.sh
deploy/mujoco/: __init__.py  config.py  launch_sim.py  run_policy.py  run_policy_modular.py  run_soft_pos_xy_tracking.py  run_vanilla_walk.py  test_mock_commands.py  unitree_mujoco.py  unitree_sdk2py_bridge.py
deploy/policies/unitree_go2_stance_soft/2026-03-25_11-55-00/: manifest.yaml  policy.pt
deploy/policies/unitree_go2_walk_soft/2026-03-25_15-48-47/: manifest.yaml  policy.pt
deploy/runners/: __init__.py  dds_interface.py  dds_runner.py
deploy/utils/: __init__.py  joint_mapper.py
docker/: .env  Dockerfile  docker-compose.yaml
experiments/: plot_compliance.py
modules/: __init__.py  envs.py  terrains.py
scripts/: deploy_unitree_sdk2.py  (+5 more)
(+75 files in other folders)
